<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/msg_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/message_icon" />

    <TextView
        android:id="@+id/sender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/sender"
        app:layout_constraintStart_toEndOf="@+id/msg_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subject_text"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/subject"
        app:layout_constraintStart_toEndOf="@+id/msg_icon"
        app:layout_constraintTop_toBottomOf="@+id/sender_text" />

    <TextView
        android:id="@+id/body_text"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/body"
        app:layout_constraintStart_toEndOf="@+id/msg_icon"
        app:layout_constraintTop_toBottomOf="@+id/subject_text" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_11_45pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/msg_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/message_star" />

</android.support.constraint.ConstraintLayout>